--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
---index-url https://download.pytorch.org/whl/cu118
+--index-url https://download.pytorch.org/whl/cu121
 
-torch
-torchvision
+torch==2.3.0+cu121
+torchvision==0.18.0+cu121
+torchaudio==2.3.0+cu121
 
-diffusers
+diffusers[torch,transformers]
 accelerate
 pillow
 numpy
 tokenizers
 safetensors
 transformers
+xformers
+scipy
+runpod
