--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
---index-url https://download.pytorch.org/whl/cu121
+--index-url https://download.pytorch.org/whl/cu118
 
-torch==2.3.0+cu121
-torchvision==0.18.0+cu121
-torchaudio==2.3.0+cu121
+torch
+torchvision
 
-diffusers[torch,transformers]
+diffusers
 accelerate
 pillow
 numpy
 tokenizers
 safetensors
 transformers
-xformers
-scipy
-runpod
